--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,3 @@
 body {
-  font-family: helvetica system-ui, -apple-system, BlinkMacSystemFont,
-    "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
-    sans-serif;
+  font-family: Georgia, "Times New Roman", Times, serif;
 }
