--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,9 @@
 body {
-  font-family: Roboto;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+}
+header {
+  background-color: #ffffff;
+  width: 1600px;
+  height: 80px;
 }
