--- a/css/styles.css
+++ b/css/styles.css
@@ -3,7 +3,7 @@ body {
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 header {
-  background-color: #ffffff;
+  background-color: solid #ffffff;
   width: 1600px;
   height: 80px;
 }
